feat: agregar validaciones con Zod al modulo de duenos
